# xfce4-twitch-plugin

./: .gitignore  AUTHORS  Makefile.am  README  README.md  TODO  configure.ac.in
icons/: Makefile.am
icons/scalable/: Makefile.am
icons/symbolic/: Makefile.am
panel-plugin/: Makefile.am  twitch-api.c  twitch-api.h  twitch-plugin-dialogs.c  twitch-plugin-dialogs.h  twitch-plugin.c  twitch-plugin.desktop.in  twitch-plugin.h
